--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-__pycache__\
-data\
-GPyOpt_Fork\GPyOpt
+/__pycache__/*
+/data/*
+/GPyOpt_Fork/*
+/CNOT_TEST_2/*
 alt_fom_expansion.py
+alt_fom_expansion_different_unitaries.py
+BO_submission_batch.pbs
+CNOT_testing_fidelity.py
+fidelity_estimator.py
+plotter_params.py
+probability_distributions.py
+probability_distributions_cluster.py
+real_C_CNOT_bayesian_optimisation.py
+real_CCNOT_bayesian_optimisation.py
+real_CNOT_bayesian_optimisation.py
+real_toffoli_bayesian_optimisation.py
+testing_ordering_prob_dists.py
