Added unnecessary files to *.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,26 @@ heisenberg_ED.py
 ising_bayesian_optimisation_trott_target.py
 heisenberg_bayesian_optimisation_trott_target.py
 ising_bayesian_optimisation_trott_target_u3.py
+BO_env.yml
+BO_parallel_runner.py
+CNOT_testing_fidelity.py
+CNOT_testing_fidelity_2.py
+estimating_fidelity_fom_sim.py
+estimating_fidelity_fom.py
+estimating_fidelity_fom2.py
+generate_all_F.py
+generate_all_FOM.py
+ising_ED.py
+messing_around_probability_dist.py
+noise_model_testing.py
+plotting_approximations.py
+plotting_expansions.py
+real_C_CNOT_bayesian_optimisation_2.py
+real_CNOT_bayesian_optimisation_noise_model.py
+real_CNOT_bayesian_optimisation_rochester.py
+real_CNOT_bayesian_optimisation_rochester_old.py
+statistics_from_device.py
+subsampling_dict_F.py
+subsampling_dict_FOM.py
+testing_batch_runner_copy.py
+testing_flammia_FOM.py
